# fastAPI

./: .env  .gitignore  Dockerfile  docker-compose.yml  install_uv.sh  pyproject.toml  requirements.txt  sql_app.db  start.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 8289f49f874b_auto_create_nickname.py  c049b14919c8_update_users_column_nickname.py  c1f71aaa4d83_update_users.py
app/: .env  config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  posts.py  users.py  votes.py
cloudflare/: cert.json  config.yml
learnFastAPI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_auth.py  test_posts.py  test_users.py
