[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app"]

[project]
name = "learnFastAPI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "bcrypt==4.0.1",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "distlib==0.4.0",
    "dnspython==2.8.0",
    "docker>=7.1.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.135.1",
    "filelock==3.25.2",
    "greenlet==3.3.2",
    "gunicorn==25.1.0",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "packaging==26.0",
    "passlib==1.7.4",
    "platformdirs==4.9.4",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "python-discovery==1.1.3",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "rsa==4.9.1",
    "six==1.17.0",
    "sqlalchemy==2.0.48",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.42.0",
    "uvloop==0.22.1",
    "virtualenv==21.2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
